k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    tier: database
spec:
  selector:
    matchLabels:
      app: mysql
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-init-config  # Corrected volume mount name
          mountPath: /docker-entrypoint-initdb.d/init.config
          subPath: init.config
          readOnly: true
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-init-config
        configMap:
          name: db-conf
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
