k8s/springboot-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-k8s-mysql
  labels:
    name: springboot-k8s-mysql
spec:
  ports:
    - port: 8080        # Port on which the service is exposed internally
      targetPort: 8080  # Port number that the container is listening on
      protocol: TCP
  selector:
    app: springboot-k8s-mysql
  type: ClusterIP     

---
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: springboot-k8s-mysql
spec:                
  selector:         
    matchLabels:
      app: springboot-k8s-mysql
  replicas: 1        
  template:
    metadata:
      labels:        
        app: springboot-k8s-mysql
    spec:
      containers:
        - name: springboot-k8s-mysql
          image: imrezaulkrm/springboot:5
          ports:
            - containerPort: 8080                
          env:   # Setting Enviornmental Variables
          - name: DB_HOST   # Setting Database host address from configMap
            valueFrom: 
              configMapKeyRef:
                name: db-conf  # name of configMap
                key: host
          - name: DB_NAME  # Setting Database name from configMap
            valueFrom:
              configMapKeyRef:
                name: db-conf 
                key: name
          - name: DB_USERNAME  # Setting Database username from Secret
            valueFrom:
              secretKeyRef:
                name: db-credentials # Secret Name
                key: username
          - name: DB_PASSWORD # Setting Database password from Secret
            valueFrom:
              secretKeyRef:
                name: db-credentials
                key: password
