k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentify
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: angular-k8s-service
            port:
              number: 80
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /studentify/?(.*)
        backend:
          service:
            name: springboot-k8s-mysql
            port:
              number: 8080
